# fastapi-boilerplate

./: Makefile  README.md  alembic.ini  pyproject.toml
app/: conf.py  db.py  main.py
app/models/: __init__.py  base.py  user.py
app/routers/: users.py
app/schemas/: __init__.py
app/serializers/: __init__.py  users_serializer.py
app/views/: users.py
app/views/schemas/: __init__.py
migrations/: env.py
migrations/versions/: c9cb954f52c3_.py
tests/: base_test.py
tests/factories/: user_factory.py
tests/routers/: test_users.py
